Added 'description' attribute for filters